# MyPersonalPage

./: README.md  pyproject.toml
src/mypersonalpage/: app.py
src/mypersonalpage/static/styles/: styles.css
src/mypersonalpage/templates/: about.ejs  compose.ejs  contact.ejs  footer.html  header.html  home.html  post.ejs
