[tool.poetry]
name = "mypersonalpage"
version = "0.1.0"
description = "WebApp for showing my professional and development information"
authors = ["Salvatore Albore <salvatore.albore@gmail.com>"]
license = "Proprietary"
packages =[{include="src"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.85.1"}
SQLAlchemy = "^1.4.41"
alembic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
